# pybis_workshop

./: .gitignore  DataStore_connect.py  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: mkdocs-deploy.yml
1_Basic/: PyBis_Basic.ipynb  PyBis_Installation_and_BeginnersTutorial.pptx
2_Advanced/: PyBIS_HandsOn.ipynb  PyBis_Advanced.ipynb
2_Advanced/Examples/: 1_Creation.ipynb  2_Analysis.ipynb  3_Maintenance.ipynb  4_CompleteWorkflow.ipynb  4_Plant_Growth_Experiment.ipynb  5_Chemical_Inventory_Task.ipynb  Analysis_example.ipynb  PyBIS_WS_CompleteWorkflow.ipynb  PyBIS_WS_RealExample1.ipynb
2_Advanced/Examples/data/: plant_growth_data.csv
docs/: index.md  part1-basic_introduction.md  part2-advanced_features.md  part3-bam_parsers.md
examples/datasets/: chemical_inventory.csv
old/: DataStore_connect.ipynb  DataStore_connect.py
old/2_Advanced/: PyBIS_HandsOn.ipynb
part1-basic_introduction/: index.html
part2-advanced_features/: index.html
part3-bam_parsers/: index.html
search/: search_index.json
