[project]
classifiers = [
  "Programming Language :: Python :: 3.12",
]
name = "bam-pybis-workshop"
description = "The official training material for pyBIS in BAM."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "BAM Data Store", email = "datastore@bam.de" },
]
maintainers = [
  { name = "Jose M. Pizarro", email = "jose.pizarro-blanco@bam.de" },
]
license = { file = "LICENSE" }
dependencies = [
  "pybis~=1.37.1rc4",
  "jupyter",
  "jupyterlab",
  "mkdocs-material",
  "mkdocs-click",
  "mkdocstrings",
  "mkdocstrings-python"
]
